<resources>
    <string name="app_name">YoutubeDownloader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">How r u</string>
    <string name="search_videos">Search more videos</string>
    <string name="go_to_searched_videos">Go to searched videos</string>
    <string name="enter_video_url">Enter Video Url</string>
    <string name="download_video">Download video</string>
    <string name="delete_url">Delete Url</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="search_videos_history">Searched Videos</string>
    <string name="enter_url">Enter Url</string>
    <string name="no_url_saved_please_add_a_url_to_save">Add a video URL to download video!</string>
    <string name="add_url">Add url</string>
    <string name="video_title">Video title</string>
    <string name="video_url">Video URL</string>
</resources>