<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_url_layout"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.youtubedownloader.viewmodel.YoutubeDownloaderViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.DialogUrl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_url"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/video_url_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_video_url"
            android:textSize="15sp"
            android:id="@+id/video_url_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_url_header"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
                android:layout_width="0dp"
                android:id="@+id/myUrl"
                android:hint="@string/enter_video_url"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_url_message"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintVertical_bias="0.25" android:minHeight="48dp">
        </EditText>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submit"
                app:layout_constraintTop_toBottomOf="@id/myUrl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintEnd_toEndOf="parent">
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>