<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            tools:context=".fragments.OptionFragment">
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:foregroundGravity="fill_horizontal|fill"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textSize="20sp"
                android:gravity="center"
                android:hint="@string/video_title"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="Testing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thumbnail"
                android:layout_marginTop="36dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <Button
                android:text="@string/delete_url"
                android:id="@+id/delete_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="28dp"/>
        <Button
                android:text="@string/download_video"
                android:id="@+id/download_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delete_url"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="1.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>